<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        android:enabled="true" />

    <item
        android:id="@+id/navigation_groceries"
        android:icon="@drawable/ic_groceries"
        android:title="@string/title_groceries"
        android:enabled="true" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_list"
        android:title="@string/title_orders"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account"
        android:enabled="true"/>

</menu>