<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_zip_code">

    <fragment
        android:id="@+id/navigation_zip_code"
        android:name="com.example.bestprice.ui.zipcode.ZipCodeFragment"
        android:label="@string/title_zipcode"
        tools:layout="@layout/fragment_zip_code"/>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bestprice.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_groceries"
        android:name="com.example.bestprice.ui.groceries.GroceriesFragment"
        android:label="@string/title_groceries"
        tools:layout="@layout/fragment_groceries" />

    <fragment
        android:id="@+id/navigation_orders"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.bestprice.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>