<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunitobold"
        android:text="@string/title_account"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/support"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="340dp"
        android:text="@string/support"
        android:fontFamily="@font/nunitobold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_record_voice_over"
        app:iconPadding="10dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/contact"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="388dp"
        android:text="@string/contact"
        android:fontFamily="@font/nunitobold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_mail_outline"
        app:iconPadding="10dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/review"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="436dp"
        android:fontFamily="@font/nunitobold"
        android:text="@string/review"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_chat"
        app:iconPadding="10dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/about"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="484dp"
        android:text="@string/about"
        android:textAllCaps="false"
        android:fontFamily="@font/nunitobold"
        android:textColor="@color/black"
        app:icon="@drawable/ic_info_outline"
        app:iconPadding="10dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>