<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:id="@+id/home_fragment">


    <TextView
        android:id="@+id/text_home1"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="664dp"
        android:fontFamily="@font/nunito"
        android:text="@string/home_title1"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_home2"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="664dp"
        android:fontFamily="@font/nunito"
        android:text="@string/home_title2"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_home3"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="632dp"
        android:fontFamily="@font/nunito"
        android:text="@string/home_title3"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="188dp"
        android:fontFamily="@font/nunitobold"
        android:text="@string/stores_list"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/button_rounded"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/button_home"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="230dp"
        android:visibility="visible"
        app:cardBackgroundColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/market_basket" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="316dp"
        android:fontFamily="@font/nunitosemibold"
        android:text="@string/market_basket"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="230dp"
        android:visibility="visible"
        app:cardBackgroundColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/wegmans" />
    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginTop="316dp"
        android:fontFamily="@font/nunitosemibold"
        android:text="@string/wegmans"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="350dp"
        android:visibility="visible"
        app:cardBackgroundColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/stop_shop" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="436dp"
        android:fontFamily="@font/nunitosemibold"
        android:text="@string/stop_shop"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="350dp"
        android:visibility="visible"
        app:cardBackgroundColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/shawns" />
    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginTop="436dp"
        android:fontFamily="@font/nunitosemibold"
        android:text="@string/shawns"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="480dp"
        android:visibility="visible"
        app:cardBackgroundColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/americas_market" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="564dp"
        android:fontFamily="@font/nunitosemibold"
        android:text="@string/americas_food_basket"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="480dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/star_market" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginTop="564dp"
        android:fontFamily="@font/nunitosemibold"
        android:text="@string/star_market"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>