<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_zip_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.zipcode.ZipCodeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="108dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="296dp"
        android:fontFamily="@font/nunitobold"
        android:text="@string/stores_near"
        android:textColor="@color/colorPrimary"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_zip_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxCornerRadiusTopEnd="26dp"
        app:boxCornerRadiusTopStart="26dp"
        app:boxCornerRadiusBottomEnd="26dp"
        app:boxCornerRadiusBottomStart="26dp"
        android:layout_marginTop="330dp"
        android:layout_marginStart="92dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_gravity="center_vertical"
            android:paddingStart="30dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/zipCodeButton"
        android:layout_width="222dp"
        android:layout_height="50dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="404dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/nunito"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/continue_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>